# phaethon

./: .gitignore  README.md  analyze_demo.py  example.py  fastchem_demo.py  outgassing_demo.py  phaethon_demo.py  pyproject.toml  setup.py  startool_demo.py
input/: README  logP_TERRA_dIW-4.csv
phaethon/: __init__.py  analyse.py  celestial_objects.py  fastchem_coupling.py  gas_mixture.py  interfaces.py  iterator.py  lavaplanet.py  logger.py  outgassing.py  petitradtrans_coupling.py  pipeline.py  plotting.py  root_finder.py  save_output.py  star.py  taurex_coupling.py  utilities.py
phaethon/celestial_objects/: __init__.py  planet.py  planetary_system.py  star.py  utils.py
phaethon/fastchem/: __init__.py  coupling.py
phaethon/postradtrans/: petitradtrans_coupling.py
tests/: test_fastchem.py  test_ideal_gas_mixture.py  test_lavaplanet.py  test_outgassing.py  test_root_finder.py  test_star.py
