[tool.poetry]
name = "phaethon"
version = "0.1.0"
description = "Coupling magma oceans and their atmospheres"
authors = ["Fabian L. Seidler <fabian.seidler@eaps.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "*"
pycuda = "*"
helios = { git = "git@github.com:ExPlanetology/HELIOS.git" }
pyfastchem = { git = "git@github.com:ExPlanetology/FastChem.git"}
bayesian_optimization = "^2.0.3"
numpy = "*"
pandas = "*"
scipy = "*"
molmass = "^2025.4.14"
uncertainties = "^3.1.7"
matplotlib = "^3.9.2"
matplotlib-label-lines = "^0.7.0"
h5py = "^3.12.1"
tqdm = "^4.66.5"
pyqt5 = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
