[tool.poetry]
name = "phaethon"
version = "0.1.0"
description = "Coupling magma oceans and their atmospheres"
authors = ["Fabian L. Seidler <fabian.seidler@eaps.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
bayesian_optimization = "^2.0.3"
cmcrameri = "1.8"
helios = { git = "git@github.com:ExPlanetology/HELIOS.git" } # HELIOS already comes with many
# dependencies on which phaethon also relies: astropy, numpy, scipy.
matplotlib = "^3.9.2"
matplotlib-label-lines = "^0.7.0"
molmass = "*"
pandas = "*"
petitRADTRANS = "*"
pyfastchem = { git = "git@github.com:ExPlanetology/FastChem.git"}
tqdm = "^4.66.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
